--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,17 @@
-H2{
+@font-face {
+    font-family:'Raleway-Regular'; 
+    src: url('static/Raleway-Regular.ttf');
+}
+*{
+    font-family: 'Raleway-Regular';
+}
+h3{
     font-weight: bold;
-    color: black;
+    color:black;
+}
+nav{
+    text-align: right top;
+}
+footer p{
+    font-weight: bold;
 }
