--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,33 @@
 }
 h3{
     font-weight: bold;
-    color:black;
+    color:black; 
+    margin-top: 50px; 
 }
-nav{
-    text-align: right top;
+div{
+    text-align: left;
+    float: left;
+}
+ul{
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    text-align: right;
+    margin-left: 1100px;
 }
 footer p{
     font-weight: bold;
+}
+
+section{
+    width: 50%;
+    height: 700px;
+    background-color: #ccc;
+    border: 1px solid #ccc;
+    text-align: justify;
+    margin: 50px;
+    padding: 10px;
+    padding-left: 50px;
+    display: flex;
+    flex-shrink: 20px;
 }
