--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,11 @@ div{
     float: left;
 }
 ul{
-    list-style: none;
+    list-style-type: none;
     display: flex;
     justify-content:space-around;
     text-align: right;
-    margin-left: 1100px;  
+    margin-left: 1100px;
 }
 a{
     text-decoration-line: none;
@@ -23,7 +23,7 @@ a{
 span{
     color:#0065FC;
 }
-a:hover{
+ul a:hover{
     text-decoration-line: overline;
     color:#0065FC;
 }
@@ -35,16 +35,18 @@ h3{
 footer p{
     font-weight: bold;
 }
-
-section{
-    width: 50%;
-    height: 700px;
-    background-color: #ccc;
-    border: 1px solid #ccc;
-    text-align: justify;
-    margin: 50px;
-    padding: 10px;
-    padding-left: 50px;
+strong{
+    font-weight: bold;
+}
+}
+a:hover{
+    color: blue;
+}
+ol{
+    list-style-type: none;
     display: flex;
-    flex-shrink: 20px;
+    justify-content: space-between;
+    text-align: left;
+    margin-right: 1000px;
+    margin-left: 0px;
 }
