Avancement de la structure

--- a/styles.css
+++ b/styles.css
@@ -29,11 +29,10 @@ span{
     color:#0065FC;
 }
 ul a:hover{
-    text-decoration-line: overline;
-    color:#0065FC;
+    border-top: solid #0065FC;
 }
 h3{
-    font-weight: bold;
+    font-weight:bold;
     color:black; 
     margin-top: 50px;
 }
@@ -46,7 +45,7 @@ a:hover{
 ol{
     list-style-type: none;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     text-align: left;
     margin-right: 1000px;
     margin-left: 0px;
@@ -65,13 +64,15 @@ footer{
     align-items:baseline;
     margin: auto;
 }
-/*a revoir*/
+/* voir*/
 section{
     display: flex;
 }
 #hébergements{
-    flex: 3;
+    background-color:#F2F2F2;
+    flex: 5;
 }
 #populaires{
+    background-color: #F2F2F2;
     flex: 1;
 }
