--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ ul{
     display: flex;
     justify-content:space-around;
     text-align: right;
-    margin-left: 1100px;
+    margin-left: 1000px;
 }
 a{
     text-decoration-line: none;
@@ -42,6 +42,7 @@ strong{
 a:hover{
     color: blue;
 }
+
 ol{
     list-style-type: none;
     display: flex;
@@ -64,6 +65,11 @@ footer{
     align-items:baseline;
     margin: auto;
 }
+section img { 
+    width: 150px; 
+    height: 150px;
+    object-fit: cover; 
+}
 /* voir*/
 section{
     display: flex;
@@ -75,4 +81,7 @@ section{
 #populaires{
     background-color: #F2F2F2;
     flex: 1;
+}
+h3,p{
+    clear:both
 }
