--- a/styles.css
+++ b/styles.css
@@ -25,11 +25,15 @@ a{
     text-decoration-line: none;
     color: black;
 }
-span{
-    color:#0065FC;
-}
 ul a:hover{
     border-top: solid #0065FC;
+}
+a:hover{
+    color: blue;
+}
+span{
+    color:#0065FC;
+    font-size: 1em;
 }
 h3{
     font-weight:bold;
@@ -39,18 +43,33 @@ h3{
 strong{
     font-weight: bold;
 }
-a:hover{
-    color: blue;
+
+section img, article img{ 
+    width: 150px; 
+    height: 150px;
+    object-fit: cover; 
 }
 
-ol{
-    list-style-type: none;
+
+/* voir*/
+section{
     display: flex;
-    justify-content: space-around;
-    text-align: left;
-    margin-right: 1000px;
-    margin-left: 0px;
+    flex-direction: column;
+    background-color: #F2F2F2;
 }
+
+article{
+    display: flex;
+    flex-direction: row;
+    background-color: #F2F2F2;
+}
+
+
+
+
+
+
+
 footer{
     background-color:#F2F2F2;
     
@@ -64,24 +83,4 @@ footer{
     flex-direction: row;
     align-items:baseline;
     margin: auto;
-}
-section img { 
-    width: 150px; 
-    height: 150px;
-    object-fit: cover; 
-}
-/* voir*/
-section{
-    display: flex;
-}
-#hébergements{
-    background-color:#F2F2F2;
-    flex: 5;
-}
-#populaires{
-    background-color: #F2F2F2;
-    flex: 1;
-}
-h3,p{
-    clear:both
 }
