--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body{
     margin: auto;
 }
 header div{
+    
     text-align: left;
     float: left;
 }
@@ -43,9 +44,9 @@ h3{
 strong{
     font-weight: bold;
 }
-
-
-
+.fa{
+    color: #0065FC;
+}
 
 /* voir*/
 
@@ -53,42 +54,53 @@ section{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content:space-around;
 }
 
 section article{
-    flex:1 75%;
+    flex:1 60%;
     background-color: #F2F2F2;
-    margin-right: 50px white;
 }
 aside{
     flex: 2 25%;
-    background-color: #F2F2F2;
+    background-color:#F2F2F2
 }
 article{
     flex: 3 100%;
-    background-color: #F2F2F2;
+    
 }
 section article img{
     width: 200px; 
     height: 100px;
     object-fit: cover; 
-    border-radius: 7px;
-    border:6px,white;
-    background-color: #F2F2F2;
+    border-radius: 10px;
+    border: 20px;px,white;
+    background-color: white;
  }
 aside img{
     width: 150px; 
     height: 150px;
     object-fit: cover; 
-    border-radius: 7px;
-    border: 6px white;
+    border-radius: 10px;
+    border: 5px white;
 }
 article img{
-
+    width: 150px; 
+    height: 150px;
+    object-fit: cover; 
+    border-radius: 10px;
+    border: 5px white;
 }
-
-
+#hébergements{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    flex-flow: row wrap;
+}
+article{
+    display: flex;
+    justify-content: space-around;
+}
 
 
 footer{
