--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 }
 body{
     font-family: 'Raleway-Regular',Arial, Helvetica, sans-serif;
+    margin-left: 2px;
 }
 #bloc-page{
     margin: auto;
