--- a/styles.css
+++ b/styles.css
@@ -50,59 +50,89 @@ strong{
 }
 
 /* voir*/
-
-section{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content:space-around;
-}
-
-section article{
-    flex:1 60%;
-    background-color: #F2F2F2;
-}
-aside{
-    flex: 2 25%;
-    background-color:#F2F2F2
-}
-article{
-    flex: 3 100%;
-    
-}
-section article img{
+#hébergements img{
     width: 200px; 
     height: 100px;
     object-fit: cover; 
     border-radius: 10px;
-    border: 20px;px,white;
-    background-color: white;
+    border: 20px,white;
+    margin: auto;
+  
  }
-aside img{
+#populaires img{
     width: 150px; 
     height: 150px;
     object-fit: cover; 
     border-radius: 10px;
     border: 5px white;
+    margin: auto;
 }
-article img{
-    width: 150px; 
-    height: 150px;
+#activités img{
+    width: 450px;
+    height: 200px;
+    border-radius: 10px;
+    border: 5px white;
+    margin: auto;
+}
+.photo{
+    height: 10px;
+    width: 10px;
     object-fit: cover; 
     border-radius: 10px;
     border: 5px white;
+} 
+.photo:nth-child(1){
+order: 5;
+}
+.photo:nth-child(2){
+    order: 3;
+}
+.photo:nth-child(3){
+    order: 4;
+}
+.photo:nth-child(4){
+    order: 6;
+}
+.photo:nth-child(5){
+    order: 2;
+}
+.photo:nth-child(6){
+    order: 1;
 }
 #hébergements{
     display: flex;
     justify-content: space-around;
     flex-direction: row;
     flex-flow: row wrap;
+    height: 300px;
+    width: 1100px;
+    float: left;
+    background-color:#F2F2F2;
+    border-radius: 10px;
 }
-article{
+#populaires{
+    float: right;
+    height: 300px;
+    width: 350px;
+    background-color:#F2F2F2;
+    border-radius: 10px;
+    
+    
+}
+#activités{
     display: flex;
-    justify-content: space-around;
+    justify-content:space-around;
+    flex-direction: row;
+    border-radius: 10px;
+    height: 300px;
 }
-
+aside+h3{
+    clear: both;
+}
+article span
+{
+    text-align: right;
+}
 
 footer{
     background-color:#F2F2F2;
@@ -117,6 +147,5 @@ footer{
     flex-direction: row;
     align-items:baseline;
     margin: 100px;
-    padding-right: 10px;
-    padding-bottom: 30px;
+    padding: 20px 10px 20px 10px;
 }
