--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,12 @@
 }
 body{
     font-family: 'Raleway-Regular',Arial, Helvetica, sans-serif;
-    margin-left: 2px;
 }
 #bloc-page{
+   
     margin: auto;
 }
+
 header div{
     
     text-align: left;
@@ -22,6 +23,7 @@ ul{
     justify-content:space-around;
     text-align: right;
     margin-left: 1000px;
+    align-items: flex-end;
 }
 a{
     text-decoration-line: none;
@@ -50,39 +52,60 @@ strong{
 }
 
 /* voir*/
+section{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
 #hébergements img{
     width: 200px; 
-    height: 100px;
-    object-fit: cover; 
+    height: 100px; 
     border-radius: 10px;
-    border: 20px,white;
-    margin: auto;
-  
- }
+    border: solid 5px white;
+    border-bottom: solid 70px white;
+    margin-top: 10px;
+}
+
+#hébergements{
+    background-color:#F2F2F2;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    flex: 3;
+    width: 900px;
+    height: 900px;
+}
+
 #populaires img{
     width: 150px; 
     height: 150px;
     object-fit: cover; 
     border-radius: 10px;
-    border: 5px white;
+    border: solid 5px white;
+    border-right: solid 70px white;
     margin: auto;
+}
+#populaires{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    background-color: #F2F2F2;
 }
 #activités img{
-    width: 450px;
-    height: 200px;
+    height: 100px;
+    width: 100px;
     border-radius: 10px;
-    border: 5px white;
-    margin: auto;
+    border: solid 3px #F2F2F2;
+    
 }
-.photo{
-    height: 10px;
-    width: 10px;
-    object-fit: cover; 
-    border-radius: 10px;
-    border: 5px white;
-} 
+#activités{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-self: baseline;
+}
 .photo:nth-child(1){
-order: 5;
+    order: 5;
 }
 .photo:nth-child(2){
     order: 3;
@@ -99,40 +122,16 @@ order: 5;
 .photo:nth-child(6){
     order: 1;
 }
-#hébergements{
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
-    flex-flow: row wrap;
-    height: 300px;
-    width: 1100px;
-    float: left;
-    background-color:#F2F2F2;
-    border-radius: 10px;
-}
-#populaires{
-    float: right;
-    height: 300px;
-    width: 350px;
-    background-color:#F2F2F2;
-    border-radius: 10px;
-    
-    
-}
-#activités{
-    display: flex;
-    justify-content:space-around;
-    flex-direction: row;
-    border-radius: 10px;
-    height: 300px;
-}
 aside+h3{
+
     clear: both;
 }
 article span
 {
     text-align: right;
 }
+
+
 
 footer{
     background-color:#F2F2F2;
