--- a/styles.css
+++ b/styles.css
@@ -114,11 +114,36 @@ section h3{
     margin: 20px;
 }
 
-article span
-{
+article span{
     text-align: right;
 }
+/*voir*/
+.héberg :nth-child(1){
+    width: 200px; 
+    height: 100px; 
+    position: relative;
+}
+.héberg :nth-child(2){
+    position: relative;
+}
+.héberg :nth-child(3){}
+.héberg :nth-child(4){}
+.héberg :nth-child(5){}
+.héberg :nth-child(6){}
 
+.description :nth-child(1){
+    position: absolute;
+    left:0;
+
+}
+.description :nth-child(2){
+    position: absolute;
+}
+.description :nth-child(3){}
+.description :nth-child(4){}
+.description :nth-child(5){}
+.description :nth-child(6){}
+/**/
 
 
 footer{
