--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,9 @@ span,.fa{
     color:#0065FC;
     font-size: 1em;
 }
+p{
+    color: black;
+}
 h3{
     font-weight:bold;
     color:black; 
@@ -46,6 +49,17 @@ h3{
 }
 strong{
     font-weight: bold;
+}
+header i{
+    border: solid 10px #DEEBFF;
+    background-color: #DEEBFF;
+    border-radius: 50%;
+}
+header span{
+    border: solid 1px #F2F2F2;
+    border-radius: 40px;   
+    padding: 7px 7px;
+    padding-left: 0;
 }
 /* voir*/
 section{
