--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,9 @@ header span{
     padding: 7px 7px;
     padding-left: 0;
 }
+header nav span{
+    border: none;
+}
 /* voir*/
 section{
     display: flex;
