--- a/styles.css
+++ b/styles.css
@@ -38,8 +38,7 @@ h3{
     font-weight:bold;
     color:black; 
     margin-top: 30px;
-    padding-left: 10px;
-    
+    padding-left: 10px;  
 }
 header h3{
     padding-left: 0px;
@@ -48,11 +47,12 @@ strong{
     font-weight: bold;
 }
 
-/*Header_ voir bouton comment coller le tout et marseillle en gras....et icônes manquantes..*/
+/*Header_ voir bouton comment coller le tout*/
 header div{
     text-align: left;
     float: left;
     margin-bottom: 25px;
+    margin-right: 30px;
 }
 ul{
     list-style-type: none;
@@ -129,17 +129,23 @@ header span:hover{
 }
 span a{
     padding-left: 7px;
+    padding-right: 7px;
     margin: auto;
 }
+section span strong{
+    font-weight: bold;
+    font-size: 1.1em;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 
-
-/*body-voir comment aligner les plus populaires et images floues*/
+/*body et images floues*/
 section{
     display: flex;
     justify-content: space-between;
     flex-flow: row wrap;
     align-items:center;
-    padding:10px;
+    padding:5px;
 }
 #hébergements{
     background-color: #F2F2F2;
@@ -209,10 +215,10 @@ article span{
 #populaires{
     background-color: #F2F2F2; 
     height: 600px;
-    width: 550px;
+    width: 450px;
     border-radius: 20px; 
     margin: 5px 5px 5px 5px; 
-    padding: 5px 2px 5px 2px;
+    padding: 10px 10px 10px 10px;
     margin-top: 0px;
 }
 .populaire img{
