--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body{
 }
 #bloc-page{
     margin: auto;
+    
 }
 p{
     color: black;
@@ -41,7 +42,7 @@ h3{
     padding-left: 10px;  
 }
 header h3{
-    margin-top: 10px;
+    margin-top: 40px;
     padding-left: 0px;
 }
 strong{
@@ -49,7 +50,10 @@ strong{
 }
 
 /*Header*/
-
+#logo{
+    float: left;
+    margin-top: 20px;
+}
 .menu{
     display: flex;
     justify-content:space-around;
@@ -63,7 +67,7 @@ strong{
     background-color: white;
 }
 
-.menu a:hover{
+.ancre:hover{
     border-top: solid #0065FC;
     background-color: white;
 }
@@ -77,6 +81,12 @@ strong{
     border-radius: 50%;
     padding: 7px 9px 7px 9px;
     font-size: 0.6em;
+    margin-right: 10px;
+}
+.inf{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 }
 form {
     display: flex;
